# sesac-agentic-workflow

./: .gitignore  README.md
news_chatbot_agent/: .env.example  .gitignore  QA_REPORT.md  README.md  langgraph.json  main.py  pyproject.toml
news_chatbot_agent/activities/: ACTIVITY_GUIDE.md  ACTIVITY_GUIDE_KO.md  STUDENT_ACTIVITIES.md  STUDENT_ACTIVITIES_ANSWERS.md
news_chatbot_agent/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
news_chatbot_agent/docs/: AI_SERVICE_DESIGN.md  ARCHITECTURE.md  DESIGN_THINKING_GUIDE.md  WORKFLOW_DESIGN.md  WORKFLOW_DESIGN_GUIDE.md
news_chatbot_agent/evaluate/: README.md  __init__.py  dataset.py  evaluators.py  run.py
news_chatbot_agent/tests/: __init__.py  conftest.py  test_multiturn.py
travel_planning_agent/: .gitignore  README.md  TEACHING_GUIDE.md  langgraph.json  main.py  pyproject.toml  test_multiturn.py
travel_planning_agent/activities/: STUDENT_ACTIVITIES.md  STUDENT_ACTIVITIES_ANSWERS.md
travel_planning_agent/agent/: __init__.py  graph.py  nodes.py  prompts.py  state.py  tools.py
travel_planning_agent/docs/: ARCHITECTURE.md
travel_planning_agent/evaluate/: README.md  __init__.py  dataset.py  evaluators.py  run.py
travel_planning_agent/tests/: conftest.py  test_edge_cases.py  test_multiturn.py
